# dnsity-poc

./: .coverage  .gitignore  CLAUDE.md  CONCEPT.md  DATASET_RECOMMENDATIONS.md  EXPERIMENT_DESIGN.md  EXPERIMENT_REPORT.md  EXPERIMENT_VERSIONS.md  FINAL_EVALUATION_REPORT.md  FINAL_REPORT.md  GEMINI_FINAL_EVALUATION.md  GEMINI_FINAL_EVALUATION_93.md  GPU_EXPERIMENT_RESULTS.md  IMPLEMENTATION_STATUS.md  PHASE2_QUALITY_GATE.md  README.md  TDD_PROGRESS.md  TECHNICAL_REPORT_ARXIV.md  TECHNICAL_REPORT_ARXIV_KR.md  TRAINING_LOG.md  pyproject.toml  requirements.txt
data/: DATASET_STATUS.md
docs/plans/: PLAN_gist_token.md  POC_NoLiMa_Comparison.md
experiments/: eval_gist_nolima.py  eval_lora_nolima.py  eval_rag_nolima.py  monitor_training.py  run_baseline_comparison.py  run_cpu_experiment.py  run_gist_inference.py  session_keepalive.py  train_gist_model.py
experiments/configs/: gist_10.yaml  gist_25.yaml  gist_50.yaml
experiments/results/: final_global_results.json  final_korean_results.json  global_cpu_results.json  global_full_results.json  korean_cpu_results.json  korean_full_results.json
reports/: DATASET_QUALITY_ANALYSIS.md  FINAL_REPORT_TEMPLATE.md  NOLIMA_COMPARISON_RESULTS.md
results/: GPT_OSS_EXPERIMENT_RESULTS.md  gist_nolima_full.json  gptoss20b_niah_global_niah_200.json  gptoss20b_niah_korean_niah_200.json  lora_nolima_100.json  lora_nolima_fixed.json  rag_nolima_full.json  rag_nolima_quick.json
scripts/: analyze_nolima_compliance.py  check_environment.py  e2e_simulation.py  eval_kmmlu_vllm.py  eval_niah_vllm.py  generate_nolima_hybrid.py
(+46 files in other folders)
